## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with stage0.  If not, see <http://www.gnu.org/licenses/>.

* Current
** Added
Added the ability to remove watch points in the webide

** Changed
Expanded stage0 web IDE to include the PC and instruction counter

** Fixed
Fixed behavior of R@ thanks to reepca
Updated changed checksums for stage2 FORTH
Corrected behavior when using the web IDE and attempting to set registers that don't exist
Fixed regression in hex.c caused by refactoring

** Removed
Removed stage1_assembler-0's need for Memory and reduced size of program while at it

* 0.0.9 - 2017-08-17
** Added
[CHAR] was incorporated into stage3 FORTH to reduce ascii lookup
UNTIL was incorporated into stage3 FORTH
'DODOES was incorporated into stage2 FORTH
LATEST! was incorporated into stage2 FORTH
R@ was incorporated into stage2 FORTH
DODOES was incorporated into stage2 FORTH
DOVAR was incorporated into stage2 FORTH
Added a variable BASE to control what base numbers are printed in stage3 FORTH
Added BOUNDS for common setup for sequence-iterating loops in stage3 FORTH
Added region-comment "(" (note that it doesn't nest) to stage3 FORTH
Added hex dump printer DUMP and support words to stage3 FORTH
Added DOES> and supporting words, and used it to make VARIABLE, CONSTANT, and DEFER in stage3 FORTH
Added TUCK, MIN, SPACES, :NONAME, FILL, and <> to stage3 FORTH
Added LSHIFT and RSHIFT to stage2 FORTH
Added PRINT to stage2 FORTH
Added Low memory detection to stage2 FORTH and now exits gracefully
Added Low memory detection to stage2 Lisp and now exists gracefully
Improved ISA Notes about M0 and hex2 to help bootstrappers
Added rain1's new user forth starting script, which is not actually required for bootstrapping but rather convenience